; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_raw_cb.c_raw_disconnect.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_raw_cb.c_raw_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rawcb = type { i64, %struct.socket* }
%struct.socket = type { i32, i32 }

@SOF_MP_SUBFLOW = common dso_local global i32 0, align 4
@SS_NOFDREF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @raw_disconnect(%struct.rawcb* %0) #0 {
  %2 = alloca %struct.rawcb*, align 8
  %3 = alloca %struct.socket*, align 8
  store %struct.rawcb* %0, %struct.rawcb** %2, align 8
  %4 = load %struct.rawcb*, %struct.rawcb** %2, align 8
  %5 = getelementptr inbounds %struct.rawcb, %struct.rawcb* %4, i32 0, i32 1
  %6 = load %struct.socket*, %struct.socket** %5, align 8
  store %struct.socket* %6, %struct.socket** %3, align 8
  %7 = load %struct.socket*, %struct.socket** %3, align 8
  %8 = getelementptr inbounds %struct.socket, %struct.socket* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @SOF_MP_SUBFLOW, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %23, label %13

13:                                               ; preds = %1
  %14 = load %struct.socket*, %struct.socket** %3, align 8
  %15 = getelementptr inbounds %struct.socket, %struct.socket* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @SS_NOFDREF, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %13
  %21 = load %struct.rawcb*, %struct.rawcb** %2, align 8
  %22 = call i32 @raw_detach(%struct.rawcb* %21)
  br label %23

23:                                               ; preds = %20, %13, %1
  ret void
}

declare dso_local i32 @raw_detach(%struct.rawcb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
